Clubs: Cards rounded style for all devices and fixing issues with overlaping texts

--- a/tournaments/static/css/header.css
+++ b/tournaments/static/css/header.css
@@ -147,6 +147,7 @@ margin: 18px auto -100px 12px;
 	left: 0;
 	background-color: #FFF;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.14);
+    border-radius: 20px;
 }
 
 /* front pane, placed above back */
@@ -172,7 +173,7 @@ margin: 18px auto -100px 12px;
 
 
 
-.clubs 						{box-shadow: 0 0 0 0 rgba(0,0,0,0.2); transition: 0.3s; margin-top: 0px; padding: 0px}
+.clubs 						{box-shadow: 0 0 0 0 rgba(0,0,0,0.2); transition: 0.3s; margin-top: 0px; padding: 0px; border-radius: 20%}
 .clubs:hover 				{box-shadow: 0 0 0 0 rgba(0,0,0,0.2)}
 
 .card .cover{
